# cppcrc

./: .gitignore  CMakeLists.txt  README.md
include/cppcrc/: code_base.hh  code_ccitt.hh  code_crc16.hh  code_crc32.hh  code_crc64.hh  code_crc8.hh  code_crcdnp.hh  code_crckrmit.hh  code_crcsick.hh  encoder.hh
src/: code_crc16.cc  code_crc32.cc  code_crc64.cc  code_crc8.cc  code_crcccitt.cc  code_crcdnp.cc  code_crckrmit.cc  code_crcsick.cc
src/include/: allcrc.hh
src/include/crc/: code_base.hh  code_crc16.hh  code_crc32.hh  code_crc64.hh  code_crc8.hh  code_crckrmit.hh  code_crcsick.hh  encoder.hh
tests/: testcrc.cc
